refactor(make): apply '${}' and '$()' in correct contexts

--- a/conf/Makefile
+++ b/conf/Makefile
@@ -1,25 +1,25 @@
 PWD ?= .
 
-PHP_STAN := $(PWD)/vendor/bin/phpstan analyze --memory-limit=-1
-PHP_STAN_CONFIG := --configuration $(PWD)/conf/phpstan.neon
+PHP_STAN := ${PWD}/vendor/bin/phpstan analyze --memory-limit=-1
+PHP_STAN_CONFIG := --configuration ${PWD}/conf/phpstan.neon
 
-PHP_CS_FIXER := $(PWD)/vendor/bin/php-cs-fixer
-PHP_CS_FIXER_CONFIG := --config $(PWD)/conf/.php-cs-fixer.php
+PHP_CS_FIXER := ${PWD}/vendor/bin/php-cs-fixer
+PHP_CS_FIXER_CONFIG := --config ${PWD}/conf/.php-cs-fixer.php
 
-RECTOR := $(PWD)/vendor/bin/rector process
-RECTOR_CONFIG := --config $(PWD)/conf/rector.php
+RECTOR := ${PWD}/vendor/bin/rector process
+RECTOR_CONFIG := --config ${PWD}/conf/rector.php
 
-PHP_UNIT := $(PWD)/vendor/bin/pest
-PHP_UNIT_CONFIG := --configuration $(PWD)/conf/phpunit.dist.xml
+PHP_UNIT := ${PWD}/vendor/bin/pest
+PHP_UNIT_CONFIG := --configuration ${PWD}/conf/phpunit.dist.xml
 
-ARGS := $(wordlist 2,$(words $(MAKECMDGOALS)),$(MAKECMDGOALS))
+ARGS := $(wordlist 2,$(words ${MAKECMDGOALS}),${MAKECMDGOALS})
 
-$(eval $(ARGS):;@:)
+$(eval ${ARGS}:;@:)
 
 .PHONY: help
 
 help: ## show this help
-	@awk 'BEGIN {FS = ":.*##"; printf "\033[4;37mUsage\033[0m\n  \033[1;37mmake\033[0m \033[1;35m<target>\033[0m\n\n\033[4;37mTargets\033[0m\n"} /^[a-zA-Z_-]+:.*?##/ { printf "  \033[1;35m%-20s\033[0m \033[30m%s\033[0m\n", $$1, $$2 }' $(MAKEFILE_LIST)
+	@awk 'BEGIN {FS = ":.*##"; printf "\033[4;37mUsage\033[0m\n  \033[1;37mmake\033[0m \033[1;35m<target>\033[0m\n\n\033[4;37mTargets\033[0m\n"} /^[a-zA-Z_-]+:.*?##/ { printf "  \033[1;35m%-20s\033[0m \033[30m%s\033[0m\n", $$1, $$2 }' ${MAKEFILE_LIST}
 
 phpstan: ## runs phpstan analyze
 	@${PHP_STAN} ${PHP_STAN_CONFIG} ${ARGS}
@@ -31,7 +31,7 @@ phpstan-raw: ## runs phpstan analyze with raw output
 	@${PHP_STAN} --error-format=raw ${PHP_STAN_CONFIG} ${ARGS}
 
 phpstan-list: ## lists processed phpstan files
-	@make phpstan-raw -- --debug 2>&1 | grep -oP "(?<=$(PWD)/).+\.php$$"
+	@make phpstan-raw -- --debug 2>&1 | grep -oP "(?<=${PWD}/).+\.php$$"
 
 php-cs-fixer: ## runs php-cs-fixer fix
 	@${PHP_CS_FIXER} fix -v --show-progress=dots ${PHP_CS_FIXER_CONFIG} ${ARGS}
@@ -49,7 +49,7 @@ rector-dry-run: ## runs rector process in dry run mode
 	@${RECTOR} ${RECTOR_CONFIG} --dry-run ${ARGS}
 
 rector-list: ## lists processed rector files
-	@${RECTOR} ${RECTOR_CONFIG} --debug --dry-run | grep -oP "(?<=\[file\] $(PWD)/).+\.php"
+	@${RECTOR} ${RECTOR_CONFIG} --debug --dry-run | grep -oP "(?<=\[file\] ${PWD}/).+\.php"
 
 test: ## runs tests
 	@${PHP_UNIT} ${PHP_UNIT_CONFIG} ${ARGS}
@@ -62,4 +62,4 @@ check: rector php-cs-fixer phpstan test ## runs rector, php-cs-fixer, phpstan an
 %:
 	@:
 
--include $(PWD)/.local/Makefile
+-include ${PWD}/.local/Makefile
