--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,18 +31,18 @@ on:
       is-dry-run:
         description: If true, skip publishing, releases and uploads
         required: false
-        type: boolean
-        default: true
+        type: string
+        default: 'true'
       do-ensure-set-secrets:
         description: If true, fail when expected publishing secrets are missing
         required: false
-        type: boolean
-        default: false
+        type: string
+        default: 'false'
       do-enable-js:
         description: Enable JS checks and build/publish (requires package.json, bun-version)
         required: false
-        type: boolean
-        default: false
+        type: string
+        default: 'false'
       bun-version:
         description: Bun version to use when JS is enabled
         required: false
@@ -51,8 +51,8 @@ on:
       do-enable-php:
         description: Enable PHP checks and build/publish (requires composer.json, php-version)
         required: false
-        type: boolean
-        default: false
+        type: string
+        default: 'false'
       php-version:
         description: PHP version to use when PHP is enabled
         required: false
@@ -86,18 +86,18 @@ on:
       is-dry-run:
         description: If true, skip publishing, releases and uploads
         required: false
-        type: boolean
-        default: true
+        type: string
+        default: 'true'
       do-ensure-set-secrets:
         description: If true, fail when expected publishing secrets are missing
         required: false
-        type: boolean
-        default: false
+        type: string
+        default: 'false'
       do-enable-js:
         description: Enable JS checks and build/publish (requires package.json, bun-version)
         required: false
-        type: boolean
-        default: false
+        type: string
+        default: 'false'
       bun-version:
         description: Bun version to use when JS is enabled
         required: false
@@ -106,8 +106,8 @@ on:
       do-enable-php:
         description: Enable PHP checks and build/publish (requires composer.json, php-version)
         required: false
-        type: boolean
-        default: false
+        type: string
+        default: 'false'
       php-version:
         description: PHP version to use when PHP is enabled
         required: false
